Changelog for CMFDiffTool

    (name of developer listed in brackets)

CMFFiffTool 0.3.5

  - Fixed issue causing diffs to break for folders that switched between
    inside and outside ref modifiers.
    [alecm]

  - Updated componentregisty.xml to new style.
    [hannosch]

CMFFiffTool 0.3.4 2007-06-08

  - Fixed i18n markup in at_changeset.pt.
    [hannosch]

CMFFiffTool 0.3.3 2007-03-05

  - Removed default config for ATCT types, it goes in Plone now
    [alecm]
    
CMFFiffTool 0.3.2 2007-03-05

  - Added default config for ATCT types
    [alecm]
    
CMFDiffTool 0.3.1 2007-02-09

    - Removed useless status message.
      [hannosch]

    - Added ZCML layer setup for tests
      [alecm]

CMFDiffTool 0.3 2006-10-02

    - Product installation is now based on a GenericSetup extension profile.
      [hannosch]

    - Code modernization for Python 2.4 / CMF 1.6.
      [hannosch]

    - Initial version.
      [brentmh]